--- a/Templates_Universal/templates_core_session/recuperar2.html
+++ b/Templates_Universal/templates_core_session/recuperar2.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'fonts/source-sans-3-5.0.12/index.css' %}">
 
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="{% static 'css/login2.css' %}">
+    <link rel="stylesheet" href="{% static 'css/recuperar2.css' %}">
 
 </head>
 <body>
