--- a/Templates_Universal/templates_categoria/categorias.html
+++ b/Templates_Universal/templates_categoria/categorias.html
@@ -42,7 +42,7 @@ Categorías
           <form method="GET" class="d-flex gap-2 ms-auto">
               <div class="input-group input-group-sm">
                   <input type="text" name="search" class="form-control" placeholder="Buscar categoría..." 
-                        value="{{ search_query }}" style="width: 200px;">
+                        value="{{ search_query }}" style="width: 200px;">   
                   <button type="submit" class="btn btn-outline-secondary">
                       <i class="bi bi-search"></i>
                   </button>
@@ -74,7 +74,11 @@ Categorías
               <tr>
                 <td>{{ Carte.Id_categoria }}</td>
                 <td class="fw-semibold">{{ Carte.Nombre }}</td>
-                <td><span class="badge text-bg-success">{{ Carte.Estado }}</span></td>
+                <td>
+                    <span class="badge {% if Carte.Estado == 'Activo' %}text-bg-success{% else %}text-bg-danger{% endif %}">
+                        {{ Carte.Estado }}
+                    </span>
+                </td>
                 <td>
                     <a href="{% url 'categorias_edit' Carte.Id_categoria %}" class="btn btn-sm btn-warning me-1">
                         <i class="bi bi-pencil-fill"></i>
