--- a/Templates_Universal/templates_categoria/crear_categoria.html
+++ b/Templates_Universal/templates_categoria/crear_categoria.html
@@ -30,14 +30,28 @@
                 {% csrf_token %}
                 <div class="card-body">
                     <div class="mb-3">
-                        <label for="nombreCategoria" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombreCategoria" name="nombre" required>
+                        {{ form.Nombre.label_tag }}
+                        {{ form.Nombre }}
+                        {% if form.Nombre.errors %}
+                            <div class="text-danger">{{ form.Nombre.errors }}</div>
+                        {% endif %}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.Estado.label_tag }}
+                        {{ form.Estado }}
+                        {% if form.Estado.errors %}
+                            <div class="text-danger">{{ form.Estado.errors }}</div>
+                        {% endif %}
                     </div>
                 </div>
 
                 <div class="card-footer text-end">
-                    <a href="{% url 'Categorias' %}" class="btn btn-secondary me-2">Cancelar</a>
-                    <button type="submit" class="btn btn-success">Guardar Categoría</button>
+                    <a href="{% url 'Categorias' %}" class="btn btn-secondary me-2">
+                        <i class="bi bi-x-circle"></i> Cancelar
+                    </a>
+                    <button type="submit" class="btn btn-success">
+                        <i class="bi bi-check-circle"></i> Guardar Categoría
+                    </button>
                 </div>
             </form>
         </div>
@@ -61,7 +75,7 @@ document.getElementById('formCrearCategoria').addEventListener('submit', async f
 
         const data = await response.json();
         
-        if (response.ok) {
+        if (response.ok && data.success) {
             alert(data.message);
             if (data.redirect) {
                 window.location.href = data.redirect;
