--- a/Templates_Universal/templates_productos/Detalle_producto.html
+++ b/Templates_Universal/templates_productos/Detalle_producto.html
@@ -1,92 +1,186 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
 {% block title %}
 Detalle Producto
 {% endblock %}
 
-{% block content %} 
+{% block content %}
+<!--begin::App Content Header-->
+<div class="app-content-header">
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-sm-8">
+        <h3 class="mb-0">
+          <i class="bi bi-eye me-2"></i> Detalle del Producto
+        </h3>
+      </div>
+      <div class="col-sm-4 text-end">
+        <ol class="breadcrumb float-sm-end mb-0">
+          <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
+          <li class="breadcrumb-item"><a href="{% url 'Producto' %}">Productos</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Detalle</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div>
+<!--end::App Content Header-->
 
+<div class="app-content">
+  <div class="container-fluid">
     {% for detail in DetalleP %}
+    <div class="card shadow-sm border-0">
+      <div class="row g-0">
+        
+        <!-- Columna izquierda: Imagen -->
+        <div class="col-lg-5">
+          <div class="p-4 bg-light h-100 d-flex align-items-center justify-content-center">
+            {% if detail.prod_imagen %}
+              <img src="{{ detail.prod_imagen.url }}" alt="{{ detail.Nombre }}" 
+                   class="img-fluid rounded shadow-sm" 
+                   style="max-height: 450px; width: 100%; object-fit: contain;">
+            {% else %}
+              <div class="text-center text-muted">
+                <i class="bi bi-image display-1"></i>
+                <p class="mt-2">Sin imagen disponible</p>
+              </div>
+            {% endif %}
+          </div>
+        </div>
 
-    <div class="d-flex align-items-center justify-content-center" style="min-height: calc(100vh - 140px);">
-        <div class="container my-4" style="max-width:1100px;">
-            <div class="card shadow-sm w-100">
-                <div class="row g-0">
-                    <!-- izquierda: imagen -->
-                    <div class="col-lg-5 bg-light d-flex align-items-center justify-content-center p-4">
-                        <!-- Aquí irá la URL de la imagen enviada por la función -->
-                        <img id="detalle-imagen" src="{{ detail.prod_imagen.url }}" alt="Imagen Producto"
-                            class="img-fluid rounded" style="max-height:520px; width:100%; object-fit:contain;">
-                    </div>
+        <!-- Columna derecha: Información -->
+        <div class="col-lg-7">
+          <div class="card-body p-4">
+            
+            <!-- Encabezado con nombre y estado -->
+            <div class="d-flex justify-content-between align-items-start mb-4">
+              <div>
+                <h2 class="fw-bold mb-2">{{ detail.Nombre }}</h2>
+                <span class="badge bg-info text-white fs-6">
+                  <i class="bi bi-tag-fill me-1"></i>{{ detail.Catego_Id.Nombre }}
+                </span>
+              </div>
+              <span class="badge {% if detail.Estado == 'Activo' %}bg-success{% else %}bg-danger{% endif %} fs-6 px-3 py-2">
+                {{ detail.Estado }}
+              </span>
+            </div>
 
-                    <!-- derecha: datos (fondo BLANCO) -->
-                    <div class="col-lg-7" style="background:#ffffff;">
-                        <div class="card-body p-5 h-100 d-flex flex-column">
-                            <!-- Encabezado: nombre + estado -->
-                            <div class="d-flex justify-content-between align-items-start mb-4">
-                                <h1 id="detalle-nombre" class="fw-bold mb-0" style="font-size:2rem; line-height:1.05;">
-                                    {{ detail.Nombre }} <!-- Nombre enviado por la función -->
-                                </h1>
+            <!-- Información del producto en tarjetas -->
+            <div class="row g-3 mb-4">
+              <div class="col-md-6">
+                <div class="card bg-light border-0 h-100">
+                  <div class="card-body">
+                    <small class="text-muted d-block mb-1">
+                      <i class="bi bi-hash me-1"></i>ID del Producto
+                    </small>
+                    <h5 class="mb-0 fw-bold text-primary">#{{ detail.Id_producto }}</h5>
+                  </div>
+                </div>
+              </div>
 
-                                <!-- Estado: solo visualización, destacado -->
-                                <div id="detalle-estado" class="text-end">
-                                    <span class="badge rounded-pill text-white"
-                                        style="background:#c82333; font-size:1.1rem; padding:0.5rem 0.9rem; box-shadow:0 2px 6px rgba(0,0,0,0.12);">
-                                        {{ detail.Estado }} <!-- Estado enviado por la función -->
-                                    </span>
-                                </div>
-                            </div>
+              <div class="col-md-6">
+                <div class="card bg-light border-0 h-100">
+                  <div class="card-body">
+                    <small class="text-muted d-block mb-1">
+                      <i class="bi bi-box me-1"></i>Stock Disponible
+                    </small>
+                    <h5 class="mb-0 fw-bold">
+                      <span class="badge {% if detail.Stock > 10 %}bg-success{% elif detail.Stock > 0 %}bg-warning text-dark{% else %}bg-danger{% endif %} fs-6">
+                        {{ detail.Stock }} unidades
+                      </span>
+                    </h5>
+                  </div>
+                </div>
+              </div>
 
-                            <!-- Datos distribuidos y con más espacio -->
-                            <div class="row g-3 mb-3" style="font-size:1.05rem;">
-                                <div class="col-md-6">
-                                    <small class="text-muted">ID</small>
-                                    <div class="fw-semibold" id="detalle-id" style="font-size:1.15rem;">{{ detail.Id_producto }}</div>
-                                </div>
+              <div class="col-md-6">
+                <div class="card bg-light border-0 h-100">
+                  <div class="card-body">
+                    <small class="text-muted d-block mb-1">
+                      <i class="bi bi-cart-dash me-1"></i>Precio de Compra
+                    </small>
+                    <h5 class="mb-0 fw-bold text-primary">${{ detail.Precio_de_compra }}</h5>
+                  </div>
+                </div>
+              </div>
 
-                                <div class="col-md-6">
-                                    <small class="text-muted">Categoría</small>
-                                    <div class="fw-semibold" id="detalle-categoria" style="font-size:1.15rem;">{{ detail.Catego_Id.Nombre }}</div>
-                                </div>
+              <div class="col-md-6">
+                <div class="card bg-light border-0 h-100">
+                  <div class="card-body">
+                    <small class="text-muted d-block mb-1">
+                      <i class="bi bi-cart-check me-1"></i>Precio de Venta
+                    </small>
+                    <h5 class="mb-0 fw-bold text-success">${{ detail.Precio_de_venta }}</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-                                <div class="col-md-6">
-                                    <small class="text-muted">Stock</small>
-                                    <div class="fw-semibold" id="detalle-stock" style="font-size:1.15rem;">{{ detail.Stock }}</div>
-                                </div>
+            <!-- Descripción -->
+            <div class="mb-4">
+              <h6 class="fw-semibold mb-2">
+                <i class="bi bi-card-text me-2 text-primary"></i>Descripción del Producto
+              </h6>
+              <div class="border rounded p-3 bg-light" style="min-height: 120px;">
+                {% if detail.Descripcion %}
+                  <p class="mb-0" style="white-space: pre-wrap; line-height: 1.6;">{{ detail.Descripcion }}</p>
+                {% else %}
+                  <p class="mb-0 text-muted fst-italic">No hay descripción disponible para este producto.</p>
+                {% endif %}
+              </div>
+            </div>
 
-                                <div class="col-md-6">
-                                    <small class="text-muted">Precio Compra</small>
-                                    <div class="fw-semibold" id="detalle-compra" style="font-size:1.15rem;">${{ detail.Precio_de_compra }}</div>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <small class="text-muted">Precio Venta</small>
-                                    <div class="fw-semibold" id="detalle-venta" style="font-size:1.15rem;">${{ detail.Precio_de_venta }}</div>
-                                </div>
-                            </div>
-
-                            <!-- Descripción: ampliada, solo mostrar contenido actual -->
-                            <div class="mb-3">
-                                <small class="text-muted">Descripción</small>
-                                <div id="detalle-descripcion" class="border rounded p-4 mt-2"
-                                    style="background:#ffffff; min-height:180px; font-size:1.05rem; line-height:1.6; color:#212529; overflow:auto;">
-                                    {{ detail.Descripcion }} <!-- Descripción enviada por la función -->
-                                </div>
-                            </div>
-
-                            <!-- solo enlace para volver al listado -->
-                            <div class="mt-4 text-end">
-                                <a href="{% url 'Producto' %}" class="btn btn-outline-primary">Volver al listado</a>
-                            </div>
-                        </div>
-                    </div> <!-- /col derecha -->
-                </div> <!-- /row -->
-            </div> <!-- /card -->
-        </div> <!-- /container -->
-    </div> <!-- /wrapper --> 
-
+            <!-- Botones de acción -->
+            <div class="d-flex justify-content-end gap-2 mt-4">
+              <a href="{% url 'Producto' %}" class="btn btn-secondary">
+                <i class="bi bi-arrow-left me-1"></i>Volver
+              </a>
+              <a href="#" class="btn btn-warning" >
+                <i class="bi bi-pencil-fill me-1"></i>Editar Producto
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     {% endfor %}
+  </div>
+</div>
+
+<style>
+  .card-body h6.fw-semibold {
+    color: #495057;
+  }
+
+  .card.bg-light {
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+
+  .card.bg-light:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+
+  @media (max-width: 992px) {
+    .col-lg-5 {
+      min-height: 300px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .card-body {
+      padding: 1.5rem !important;
+    }
+
+    .d-flex.justify-content-end.gap-2 {
+      flex-direction: column !important;
+    }
+
+    .d-flex.justify-content-end.gap-2 > * {
+      width: 100% !important;
+    }
+  }
+</style>
 
 {% endblock %}
