--- a/Templates_Universal/templates_ventas/ventas.html
+++ b/Templates_Universal/templates_ventas/ventas.html
@@ -122,12 +122,12 @@
                           {% endwith %}
                       </td>
                       <td>
+                          <a href="{% url 'detalle_venta' venta.Id_venta %}" class="btn btn-sm btn-info me-1">
+                              <i class="bi bi-eye-fill"></i>
+                          </a>
                           <a href="{% url 'ventas_edit' venta.Id_venta %}" class="btn btn-sm btn-warning me-1">
                               <i class="bi bi-pencil-fill"></i>
                           </a>
-                          <button class="btn btn-sm btn-danger">
-                              <i class="bi bi-trash"></i>
-                          </button>
                       </td>
                   </tr>
                   {% empty %}
